Fix overflow issue in projects section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -498,6 +498,7 @@ footer {
     justify-content: center;
     flex-wrap: wrap;
     overflow-x: visible;
+    overflow-y: visible;
     mask-image: none;
     -webkit-mask-image: none;
     -moz-mask-image: none;
